<resources>
    <string name="app_name">Security Camera Installer</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Se necesita autorizar el acceso a la cámara</string>
    <string name="no_camera_permission">Esta aplicación no puede correr porque no cuenta con los permisos de cámara.</string>
    <string name="low_storage_error">Poco espacio de almacenamiento</string>
    <string name="title_activity_main">Lector de códigos de barra</string>
    <string name="barcode_header">Haga click en la pantalla para leer el código cuando sea detectado</string>
    <string name="read_barcode">Leer código</string>
    <string name="auto_focus">Enfoque automático</string>
    <string name="use_flash">Flash</string>
    <string name="barcode_success">El código de barras se leyó con éxito</string>
    <string name="barcode_failure">No se capturó ningún código</string>
    <string name="barcode_error">"Error en la lectura: %1$s"</string>

    <string name="ver_camaras">"Cámaras"</string>
    <string name="ver_camaras_reporte">"Cámaras seleccionadas para crear el reporte"</string>
    <string name="ver_camara">"Información"</string>

    <string name="codigoBarras">Código de Barras</string>
    <string name="videoQuality">Resolución</string>
    <string name="minimumIllumination">Iluminación mínima</string>
    <string name="dayNightMode">Modos de día - noche</string>
    <string name="backlightCompensation">Compensación de luz de fondo</string>
    <string name="viewingAngle">Ángulo de visión</string>
    <string name="nightVisionDistance">Distancia de visión nocturna</string>
    <string name="iRCutFilter">Filtro de corte de infrarrojo</string>
    <string name="indoorOutdoor">Interiores / Exteriores</string>
    <string name="operatingPower">Consumo de energía</string>
    <string name="operationTemperature">Temperatura de operación</string>
    <string name="bodyConstruction">Material</string>
    <string name="cameraStandDimensions">Dimensiones</string>
    <string name="cameraStandWeight">Peso</string>
    <string name="enviar_reporte">Enviar reporte</string>
    <string name="escoger_contacto">Escoger Contacto</string>
    <string name="enviar_sms">Enviar Reporte Via SMS</string>

    <string name="enviar_correo">Enviar Reporte Via E-mail</string>
    <string name="agregar_correo">Agregar E-mail</string>
    <string name="cancelar">Cancelar</string>
    <string name="txt_lista_mail">Lista E-mail</string>
    <string name="txt_lista_mail_2">Los E-mails a los que se enviará el reporte</string>

    <string name="txt_nuevo_email">Agregar E-mail</string>
    <string name="aceptar">Aceptar</string>

    <string name="bienvenidos">Bienvenido a Security Camera Installer</string>
    <string name="nombre">Nombre</string>
    <string name="texto_sensores_principal">Por favor seleccione una cámara para analizar:</string>
    <string name="lbl_analizar">Seleccione el análisis que desea realizar</string>
    <string name="luminosidad">Iluminación</string>
    <string name="proximidad">Proximidad</string>
    <string name="magnetismo">Interferencia electromagnética</string>


</resources>
