<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.uniandes.movilesit1.EmailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_lista_mail"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listaMail"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/button4"
        android:layout_below="@+id/textView2"
        android:textFilterEnabled="false"
        android:layout_alignEnd="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/button4"
        android:layout_above="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView"
        android:onClick="cancelar" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_correo"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="enviarCorreo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_correo"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentEnd="true"
        android:onClick="agregarCorreo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_lista_mail_2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/listaMail" />
</RelativeLayout>
