<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.uniandes.movilesit1.AnalizarSensoresActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Análisis"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_analizar"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView8"
        android:textSize="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luminosidad"
        android:onClick="luminosidad"
        android:id="@+id/button11"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximidad"
        android:onClick="proximidad"
        android:id="@+id/button12"
        android:layout_below="@+id/button11"
        android:layout_alignEnd="@+id/button11"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetismo"
        android:onClick="magnetismo"
        android:id="@+id/button13"
        android:layout_below="@+id/button12"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button12" />
</RelativeLayout>
