<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.uniandes.movilesit1.EnviarSMSActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enviarReporteTxt"
        android:text="@string/enviar_reporte"

        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escoger_contacto"
        android:id="@+id/btnEscogerContacto"
        android:layout_below="@+id/enviarReporteTxt"
        android:onClick="mostrarSeleccionContactos"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_sms"
        android:onClick="enviarSMS"
        android:id="@+id/btnEnviarSMS"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnEscogerContacto"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
