<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.uniandes.movilesit1.modelo.InfoCamaraActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tituloVerCamaras"
        android:text="@string/ver_camara"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollInfoCamaras"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tituloVerCamaras"
        android:layout_above="@+id/button">

        <RelativeLayout android:id="@+id/organizacion" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigoBarras"
                android:id="@+id/codigoBarrasLbl"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textSize="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/codigoBarrasLbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/codigoBarras"
                android:text="@string/videoQuality"
                android:id="@+id/videoQualitylbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/videoQualitylbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/videoQuality"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/videoQuality"
                android:text="@string/minimumIllumination"
                android:id="@+id/minimumIlluminationlbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minimumIlluminationlbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/minimumIllumination"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minimumIllumination"
                android:text="@string/dayNightMode"
                android:id="@+id/dayNightModelbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dayNightModelbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/dayNightMode"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dayNightMode"
                android:text="@string/backlightCompensation"
                android:id="@+id/backlightCompensationlbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backlightCompensationlbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/backlightCompensation"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backlightCompensation"
                android:text="@string/viewingAngle"
                android:id="@+id/viewingAnglelbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewingAnglelbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/viewingAngle"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewingAngle"
                android:text="@string/nightVisionDistance"
                android:id="@+id/nightVisionDistancelbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nightVisionDistancelbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/nightVisionDistance"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nightVisionDistance"
                android:text="@string/iRCutFilter"
                android:id="@+id/iRCutFilterlbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iRCutFilterlbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/iRCutFilter"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iRCutFilter"
                android:text="@string/indoorOutdoor"
                android:id="@+id/indoorOutdoorlbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indoorOutdoorlbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/indoorOutdoor"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indoorOutdoor"
                android:text="@string/operatingPower"
                android:id="@+id/operatingPowerlbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/operatingPowerlbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/operatingPower"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/operatingPower"
                android:text="@string/operationTemperature"
                android:id="@+id/operationTemperaturelbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/operationTemperaturelbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/operationTemperature"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/operationTemperature"
                android:text="@string/bodyConstruction"
                android:id="@+id/bodyConstructionlbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bodyConstructionlbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/bodyConstruction"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bodyConstruction"
                android:text="@string/cameraStandDimensions"
                android:id="@+id/cameraStandDimensionslbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cameraStandDimensionslbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/cameraStandDimensions"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cameraStandDimensions"
                android:text="@string/cameraStandWeight"
                android:id="@+id/cameraStandWeightlbl"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/codigoBarras"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cameraStandWeightlbl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/cameraStandWeight"
                android:textSize="20dp"/>




        </RelativeLayout>


    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:onClick="botonReporte"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/scrollInfoCamaras" />


</RelativeLayout>
